<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color_two"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        app:cardCornerRadius="50dp"
        app:cardElevation="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_countryName"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_countryNameDetail"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_totalCasesText"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_totalCases"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_active"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_activeCases"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_recovered"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_recoveredCases"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_critical"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_critical"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_todayCases"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_todayCases"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_todayDeaths"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_todayDeaths"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_totalDeaths"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_totalDeaths"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_tests"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tv_testsDone"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/color_one"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>



</LinearLayout>